<resources>
    <string name="app_name">Müdek e-BYS</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="camera_grant">Müdek e-BYS</string>
    <string name="press_again_logout">Press back again and logout</string>

    <string name="crop">Crop</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="enhance">Enhance</string>
    <string name="black">Black_White</string>
    <string name="reset">Reset</string>
    <string name="scan">Scan</string>

    <string name="username">Username :</string>
    <string name="Mudek">Müdek e-BYS</string>
    <string name="mail">@ktu.edu.tr</string>
    <string name="password">Password :</string>
    <string name="login">LOGIN</string>
    <string name="forgot">I forgot my password.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_lessonıtems_list">LessonItems</string>
    <string name="title_lessonıtems_detail">LessonItems Detail</string>
</resources>
