<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textMudek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageIcon"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/Mudek"
        android:textAlignment="center"
        android:textColor="@color/colorTextGreen"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMudek"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colorTextDarkest"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textMudek"
        android:layout_marginStart="5dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@id/textUsername"
        android:fontFamily="sans-serif-thin"
        android:hint="314012"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMudek"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/editUsername"
        android:fontFamily="sans-serif-thin"
        android:text="@string/mail"
        android:textAlignment="center"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/colorTextDarkest"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/textPassword"
        android:fontFamily="sans-serif-thin"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorTextGreen"
        android:fontFamily="sans-serif-thin"
        android:onClick="login"
        android:padding="15dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textMissPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-thin"
        android:onClick="missPassword"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDarkest"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

</RelativeLayout>